# byu-recruiting-package

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: streamlit_app.py
byu_recruiting/: __init__.py  data.py  modeling.py  utils.py  visualize.py
docs/: _config.yml  _quarto.yml  dataset.md  functions.md  index.md  styles.css  tutorial.md
docs/notebooks/: distance_calc.md  non_top_pages.md  top_pages.md
