[project]
name = "byu-recruiting-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "geopy>=2.4.1",
    "imblearn>=0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
]
